<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".interfazAlumno">

    <Button
        android:id="@+id/b3.1"
        android:layout_width="153dp"
        android:layout_height="93dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="588dp"
        android:text="@string/ver_notas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b3.2"
        android:layout_width="128dp"
        android:layout_height="88dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="479dp"
        android:text="@string/ver_asistencia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b3.1" />

    <Button
        android:id="@+id/b3.3"
        android:layout_width="157dp"
        android:layout_height="101dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="352dp"
        android:text="@string/ver_anotaciones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b3.2" />

    <Button
        android:id="@+id/b3.4"
        android:layout_width="133dp"
        android:layout_height="73dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="194dp"
        android:text="@string/menu_principal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b3.3" />
</androidx.constraintlayout.widget.ConstraintLayout>