<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".interfazProfesor">

    <Button
        android:id="@+id/b2.1"
        android:layout_width="155dp"
        android:layout_height="85dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="582dp"
        android:text="@string/ingresar_nota"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b2.2"
        android:layout_width="152dp"
        android:layout_height="77dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="475dp"
        android:text="@string/ingresar_asistencia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b2.1" />

    <Button
        android:id="@+id/b2.3"
        android:layout_width="156dp"
        android:layout_height="77dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="361dp"
        android:text="@string/ingresar_anotaciones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b2.2" />

    <Button
        android:id="@+id/b2.4"
        android:layout_width="136dp"
        android:layout_height="87dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="166dp"
        android:text="@string/menu_principal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b2.3" />
</androidx.constraintlayout.widget.ConstraintLayout>