<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verNotasAA">

    <EditText
        android:id="@+id/string5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="25dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ingrese_rut_a_buscar"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/string4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/string4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="566dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ingrese_asignatura"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/string5" />

    <Button
        android:id="@+id/b7.1"
        android:layout_width="107dp"
        android:layout_height="64dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="472dp"
        android:text="@string/ver_notas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/string4" />

    <TextView
        android:id="@+id/notasTextView"
        android:layout_width="215dp"
        android:layout_height="205dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="217dp"
        android:text="@string/notas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b7.1" />

    <Button
        android:id="@+id/b7.2"
        android:layout_width="141dp"
        android:layout_height="79dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="108dp"
        android:text="@string/retornar_menu_anterior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notasTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>