<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ingresaNotaProfesor">

    <EditText
        android:id="@+id/number2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="561dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nota_estudiante"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/string2" />

    <EditText
        android:id="@+id/string1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="483dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/asignatura"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number2" />

    <Button
        android:id="@+id/b4.1"
        android:layout_width="125dp"
        android:layout_height="70dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="375dp"
        android:text="@string/ingresar_nota"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/string1" />

    <Button
        android:id="@+id/b4.2"
        android:layout_width="127dp"
        android:layout_height="79dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="279dp"
        android:text="@string/retornar_menu_anterior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b4.1" />

    <EditText
        android:id="@+id/string2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="25dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ingrese_rut_alumno"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/number2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>