<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verAnotacionesAA">

    <EditText
        android:id="@+id/string6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="14dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ingrese_rut_a_buscar"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/b8.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="282dp"
        android:layout_height="315dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="64dp"
        android:text="@string/anotaciones"
        app:layout_constraintBottom_toTopOf="@+id/b8.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b8.1" />

    <Button
        android:id="@+id/b8.2"
        android:layout_width="146dp"
        android:layout_height="78dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="50dp"
        android:text="@string/retornar_menu_anterior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/b8.1"
        android:layout_width="109dp"
        android:layout_height="56dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="30dp"
        android:text="@string/buscar"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/string6" />

</androidx.constraintlayout.widget.ConstraintLayout>