<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verAsistenciaAA">

    <EditText
        android:id="@+id/rutVerAsistencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="18dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ingrese_rut_a_buscar"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/b9.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b9.1"
        android:layout_width="104dp"
        android:layout_height="59dp"
        android:layout_marginStart="153dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="564dp"
        android:text="@string/buscar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rutVerAsistencia" />

    <TextView
        android:id="@+id/asistenciaTextView"
        android:layout_width="267dp"
        android:layout_height="324dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="215dp"
        android:text="@string/asistencia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b9.1" />

    <Button
        android:id="@+id/b9.2"
        android:layout_width="171dp"
        android:layout_height="83dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="109dp"
        android:text="@string/retornar_menu_anterior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/asistenciaTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>