<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginProfesor">

    <EditText
        android:id="@+id/idProfesor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="620dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ingrese_su_id"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/paswordProfesor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="552dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ingrese_su_contrase_a"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idProfesor" />

    <Button
        android:id="@+id/bloguin"
        android:layout_width="134dp"
        android:layout_height="75dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="405dp"
        android:text="@string/entrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paswordProfesor" />

    <Button
        android:id="@+id/bRetornar"
        android:layout_width="140dp"
        android:layout_height="82dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="279dp"
        android:text="@string/retornar_menu_anterior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bloguin" />
</androidx.constraintlayout.widget.ConstraintLayout>