<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/b1.1"
        android:layout_width="166dp"
        android:layout_height="99dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="502dp"
        android:text="@string/profesor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b1.2"
        android:layout_width="159dp"
        android:layout_height="103dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="314dp"
        android:text="@string/estudiante_apoderado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b1.1" />

    <Button
        android:id="@+id/b1.4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="179dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="86dp"
        android:text="@string/base"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b1.2" />
</androidx.constraintlayout.widget.ConstraintLayout>